--- a/packages/shopping-service/package.json
+++ b/packages/shopping-service/package.json
@@ -14,9 +14,12 @@
   "author": "https://github.com/juancarestre",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.7.4",
     "nodemon": "^1.19.3",
+    "validator": "^11.1.0",
     "winston": "^3.2.1"
   }
 }
