--- a/packages/dashboard-service/api/config/config.json
+++ b/packages/dashboard-service/api/config/config.json
@@ -3,6 +3,7 @@
     "USER_SERVICE_PORT": 3000
   },
   "development": {
-    "USER_SERVICE_PORT": 3000
+    "USER_SERVICE_PORT": 3000,
+    "MONGODB_URI": "mongodb://mongo:27017/ecommer"
   }
 }
