--- a/packages/dashboard-service/api/config/config.json
+++ b/packages/dashboard-service/api/config/config.json
@@ -6,7 +6,7 @@
     "USER_SERVICE_PORT": 3000,
     "MONGODB_URI": "mongodb://mongo:27017/ecommer",
     "SECRET": "SECRET",
-    "MY_WALLET_ADDRESS": "mxgD3HgYEYQ1JeF9yFoydtEiyVHs7HNPp9"
-
+    "MY_WALLET_ADDRESS": "mxgD3HgYEYQ1JeF9yFoydtEiyVHs7HNPp9",
+    "SHOPPING_SERVICE": "localhost:8082"
   }
 }
