--- a/packages/shopping-service/api/config/config.json
+++ b/packages/shopping-service/api/config/config.json
@@ -3,6 +3,10 @@
     "USER_SERVICE_PORT": 3000
   },
   "development": {
-    "USER_SERVICE_PORT": 3000
+    "USER_SERVICE_PORT": 3000,
+    "MONGODB_URI": "mongodb://mongo:27017/ecommer",
+    "SECRET": "SECRET",
+    "USER_SERVICE_URL": "http://user-service:3000",
+    "CHAINSO": "https://testnet-api.smartbit.com.au/v1/blockchain" 
   }
 }
