--- a/packages/shopping-service/docker-compose.yml
+++ b/packages/shopping-service/docker-compose.yml
@@ -6,3 +6,7 @@ services:
     image: shopping-service:latest
     ports: 
       - "8082:3000"
+networks:
+  default:
+    external:
+      name: user-service_default
