--- a/packages/shopping-service/package.json
+++ b/packages/shopping-service/package.json
@@ -20,7 +20,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
+    "node-cron": "^2.0.3",
     "nodemon": "^1.19.3",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "validator": "^11.1.0",
     "winston": "^3.2.1"
   }
