--- a/packages/shopping-service/package.json
+++ b/packages/shopping-service/package.json
@@ -18,9 +18,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "handlebars": "^4.4.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
     "node-cron": "^2.0.3",
+    "nodemailer": "^6.3.1",
     "nodemon": "^1.19.3",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
