added few test, readme and postman collection

--- a/packages/user-service/docker-compose.test.yml
+++ b/packages/user-service/docker-compose.test.yml
@@ -3,7 +3,7 @@ version: '3'
 services: 
   user-service:
     volumes:
-      - ./:/app
+      - ./:/api
     command: npm run test-watch
   mongo:
     volumes: 
