--- a/packages/dashboard-service/package.json
+++ b/packages/dashboard-service/package.json
@@ -27,6 +27,9 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "eslint": "^6.5.1"
+    "eslint": "^6.5.1",
+    "expect": "^24.9.0",
+    "mocha": "^6.2.1",
+    "supertest": "^4.0.2"
   }
 }
