--- a/packages/shopping-service/package.json
+++ b/packages/shopping-service/package.json
@@ -28,5 +28,10 @@
     "request-promise-native": "^1.0.7",
     "validator": "^11.1.0",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "expect": "^24.9.0",
+    "mocha": "^6.2.1",
+    "supertest": "^4.0.2"
   }
 }
