--- a/packages/user-service/api/config/config.json
+++ b/packages/user-service/api/config/config.json
@@ -1,6 +1,8 @@
 {
   "test": {
-    "USER_SERVICE_PORT": 3000
+    "USER_SERVICE_PORT": 3000,
+    "MONGODB_URI": "mongodb://mongo:27017/ecommerdev",
+    "SECRET": "SECRET"
   },
   "development": {
     "USER_SERVICE_PORT": 3000,
