--- a/packages/user-service/package.json
+++ b/packages/user-service/package.json
@@ -24,5 +24,10 @@
     "nodemon": "^1.19.3",
     "validator": "^11.1.0",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "expect": "^24.9.0",
+    "mocha": "^6.2.1",
+    "supertest": "^4.0.2"
   }
 }
